syntax = "proto3";

package decoder;

option go_package = "decoder/proto";

message DecoderRequest {
    string encodeText = 1; 
}

message DecoderResponse {
    string data = 1; 
}

service DecoderService {
    rpc Decode (DecoderRequest) returns (DecoderResponse);
}